--- a/app/templates/pages/sourceview.html
+++ b/app/templates/pages/sourceview.html
@@ -33,6 +33,56 @@
         </div>
       </div>
     </div>
-  </div
+</div>
+<div class="cointainer-fluid my-4">
+    <div class="row">
+        <div class="col-md-8">
+            <div class="row">
+
+                {% for article in articles %}
+                <div class="col-12 mb-3 mb-md-5">
+                  <div class="h-100">
+                    <div class="custom-card position-relative">
+                      <div class="custom-card-image">
+                        <img src="{{article.image_url}}" loading="lazy" alt="{{article.title}}" class="img-top" />
+                      </div>
+                      <div class="card-title p-2 p-md-3">
+                        <h3 class="m-0 p-0">{{article.title}}</h3>
+                      </div>
+                      <div class="custom-card-footer p-2 p-md-3">
+                        <div class="d-flex">
+                          <div class="sect">
+                            <span>Author: </span>
+                            <span> {{article.author}} </span>
+                          </div>
+                          <div class="sect ms-4">
+                            <span>Source: </span>
+                            <span>
+                              <a href="{{article.url}}" class="custom-link">Go to source</a>
+                            </span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card-description p-2 p-md-3">
+                        <p>{{article.description}}</p>
+                      </div>
+                      <div class="content p-2 p-md-3">
+                        <p>
+                          {{article.content}}
+                        </p>
+                      </div>
+                      <div class="read-more p-2 p-md-3">
+                        <a href="{{article.url}}" class="btn btn-primary">Read more</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
+  
 
 {% endblock %}
