--- a/app/templates/pages/sourceview.html
+++ b/app/templates/pages/sourceview.html
@@ -38,7 +38,7 @@
     <div class="row">
         <div class="col-md-8">
             <div class="row">
-
+              <h3 class="text-white text-center">The following are the Articles:</h3>
                 {% for article in articles %}
                 <div class="col-12 mb-3 mb-md-5">
                   <div class="h-100">
@@ -47,7 +47,8 @@
                         <img src="{{article.image_url}}" loading="lazy" alt="{{article.title}}" class="img-top" />
                       </div>
                       <div class="card-title p-2 p-md-3">
-                        <h3 class="m-0 p-0">{{article.title}}</h3>
+                        <h3 class="text-white">Article title</h3>
+                        <h3 class="m-0 p-0 bg-warning">{{article.title}}</h3>
                       </div>
                       <div class="custom-card-footer p-2 p-md-3">
                         <div class="d-flex">
