fix:fixing the navbar

--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -1,23 +1,23 @@
 
-<nav class="navbar nav_bar navbar-expand-lg navbar-light bg-light sticky-top">
+<nav class="navbar nav_bar navbar-expand-lg bg-light sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">QUICK NEWS</a>
+      <a class="navbar-brand text-dark" href="#">QUICK NEWS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active bg-primary mx-2" aria-current="page" href="#">Home</a>
+          <li class="nav-item btn btn-outline-primary">
+            <a class="nav-link text-dark  mx-2" aria-current="page" href="#">Home</a>
           </li>
-          <li class="nav-item bg-primary mx-2">
-            <a class="nav-link" href="#">Entertainment</a>
+          <li class="nav-item  btn btn-outline-primary   mx-2">
+            <a class="nav-link text-dark" href="#">Entertainment</a>
           </li>
-          <li class="nav-item bg-primary mx-2">
-            <a class="nav-link" href="#">General</a>
+          <li class="nav-item btn btn-outline-primary   mx-2">
+            <a class="nav-link text-dark" href="#">General</a>
           </li>
-          <li class="nav-item bg-primary mx-2">
-            <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Business</a>
+          <li class="nav-item btn btn-outline-primary  mx-2">
+            <a class="nav-link text-dark " href="#" tabindex="-1" aria-disabled="false">Business</a>
           </li>
         </ul>
       </div>
