fix:fixing the sidebar

--- a/app/templates/pages/sourceview.html
+++ b/app/templates/pages/sourceview.html
@@ -36,6 +36,11 @@
 </div>
 <div class="cointainer-fluid my-4">
     <div class="row">
+        <div class="col-md-4">
+          {% block sidebar %}
+          {% include 'components/sidebar.html' %}
+          {% endblock %}
+        </div>
         <div class="col-md-8">
             <div class="row">
               <h3 class="text-white text-center">The following are the Articles:</h3>
@@ -82,22 +87,12 @@
                     </div>
                   </div>
                 </div>
-
+                
                 {% endfor %}
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="custom-card p-2 p-md-3">
-                <h2 class="text-center mb-3">More News Sources</h2>
-                <div>
-                  {% for source in sources %}
-                  <div class="source-item mb-2">
-                    <a href="/sources/view/{{source.id}}/" class="custom-link d-block">{{source.name}}</a>
-                  </div>
-                  {% endfor %}
-                </div>
-              </div>
-        </div>
+        
+      
     </div>
 </div>
   
