feature:fixing the navbar

--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <nav class="navbar nav_bar navbar-expand-lg bg-light sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand text-dark" href="#">QUICK NEWS</a>
@@ -7,20 +7,24 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item btn btn-outline-primary">
-            <a class="nav-link text-dark  mx-2" aria-current="page" href="#">Home</a>
+          <li class="nav-item ">
+            <a class="nav-link btn btn-outline-primary text-dark  mx-2" aria-current="page" href="#">Home</a>
           </li>
-          <li class="nav-item  btn btn-outline-primary   mx-2">
-            <a class="nav-link text-dark" href="#">Entertainment</a>
+          <li class="nav-item     mx-2">
+            <a class="nav-link btn btn-outline-primary text-dark" href="#">Entertainment</a>
           </li>
-          <li class="nav-item btn btn-outline-primary   mx-2">
-            <a class="nav-link text-dark" href="#">General</a>
+          <li class="nav-item    mx-2">
+            <a class="nav-link btn btn-outline-primary text-dark" href="#">General</a>
           </li>
-          <li class="nav-item btn btn-outline-primary  mx-2">
-            <a class="nav-link text-dark " href="#" tabindex="-1" aria-disabled="false">Business</a>
+          <li class="nav-item   mx-2">
+            <a class="nav-link text-dark btn btn-outline-primary " href="#" tabindex="-1" aria-disabled="false">Business</a>
           </li>
         </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-primary" type="submit">Search</button>
+        </form>
       </div>
     </div>
-  </nav>
+  </nav> -->
 
